<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ambrosia_canvas"
    tools:context="com.putty.dailyreflection_v1_2.HomePage"
    tools:ignore="MergeRootFrame" >

    
    
    <Button
        style="@style/ButtonTheme"
        android:id="@+id/getMessageButton"
        android:text="@string/get_message_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        />
    
  	<Button
        style="@style/ButtonTheme"
        android:id="@+id/literatureButton"
        android:text="@string/get_literature_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        />
        
   	<Button
        style="@style/ButtonTheme"
        android:id="@+id/findMeetingButton"
        android:text="@string/find_meeting_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        />
            
	 <Button
        style="@style/ButtonTheme"
        android:id="@+id/sobrietyCounterButton"
        android:text="@string/sobriety_counter_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        />
	 
	<Button
        style="@style/ButtonTheme"
        android:id="@+id/getHelpButton"
        android:text="@string/get_help_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        />
    
    
    
    
</RelativeLayout>