<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.putty.dailyreflection_v1_2.SobrietyCounterActivity"
    tools:ignore="MergeRootFrame" 
    >

    
    <TextView 
        android:id="@+id/justForTodayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_for_today_text"
        android:textSize="26sp"
        android:typeface="serif"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        />
    
    <ImageView 
    	android:id="@+id/aaLogo"
   	    android:src="@drawable/aa_logo_ambrosiablue"
   	    android:layout_width="150dp"
   	    android:layout_height="150dp"
   	    android:layout_centerHorizontal="true"
		android:layout_alignParentTop="true"
		android:layout_marginTop="100dp"   
		android:contentDescription="@string/aa_logo_text" 	    
   	    />
    
  	<TextView 
        android:id="@+id/beenSoberForText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/been_sober_for_text"
        android:textSize="20sp"
        android:typeface="serif"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="275dp"
        />
    
    <Button
        android:id="@+id/changeDateButon"
      	style="@style/ButtonTheme"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_centerHorizontal="true"
      	android:layout_alignParentBottom="true"
      	android:layout_marginBottom="15dp"
      	android:text="@string/change_date_text"
      	/>

    <Spinner
        android:id="@+id/counterOptions"
        android:entries="@array/counter_options_array"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/counterText"
        android:layout_toRightOf="@+id/counterText"
        />

    <TextView
        android:id="@+id/counterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_below="@+id/beenSoberForText"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
		/>
    
</RelativeLayout>